# regional_controls

./: LICENSE  README.md  dashboard.qmd  pyproject.toml  run.py  scratch.ipynb
configs_popsim/: controls.csv  controls_bkup2.csv  settings.yaml
configs_pypyr/: settings.yaml
data/: .gitignore  occupation_crosswalk.csv
docs/: index.html  remi_controls_overview.wiki
projects/default/configs_popsim/: controls_bkup.csv
projects/default/configs_pypyr/: settings.yaml
projects/default/data/: county_geog.csv  industry_crosswalk.csv
projects/default/output/: .gitignore
projects/remi_adj_base_to_ofm/configs_pypyr/: settings.yaml
projects/remi_ofm_high/configs_pypyr/: settings.yaml
projects/remi_ofm_low/configs_pypyr/: settings.yaml
projects/remi_ofm_med/configs_pypyr/: settings.yaml
regional_controls/: run.py
regional_controls/steps/: archive_popsim_output.py  check_remi_age_groups.py  comparison_cache_to_hdf5.py  load_data.py  lodes_rates.py  prepare_pums.py  puma_county_lookup.py  pums_download.py  remi_controls.py  results_summaries.py  run_popsim.py  write_tables.py
regional_controls/utils/: cache_to_hdf5.py  util.py
steps/: archive_popsim_output.py  check_remi_age_groups.py  comparison_cache_to_hdf5.py  load_data.py  prepare_pums.py  puma_county_lookup.py  pums_download.py  remi_controls.py  render_dashboard.py  results_summaries.py  write_tables.py
utils/: util.py
