[project]
name = "regional-controls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=5.18.0",
    "populationsim>=0.10.0",
    "pypyr>=5.9.1",
    "us>=3.2.0",
]
